<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_save_black_24dp"
                android:title="@string/nav_menu_my_commands"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_menu_share_commands"/>
        <item android:id="@+id/nav_download"
              android:icon="@drawable/ic_file_download_black_24dp"
              android:title="@string/nav_menu_download_commands"/>

    </group>


</menu>
