<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:layout_marginBottom="20dp"
                                                   android:background="@drawable/corner_round_dialog"
>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_command_title"
            android:textColorHint="@android:color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="10dp"
            android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_enter_command_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:hint="@string/dialog_add_comamnd_description"
            android:textColorHint="@android:color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:layout_editor_absoluteX="3dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_enter_command_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:textColorHint="@android:color/white"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:textColor="@android:color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton android:layout_width="match_parent"
                                                       android:id="@+id/dialog_enter_command_save_button"
                                                       android:layout_height="70dp"
                                                       app:cornerRadius="50dp"
                                                       android:textColor="@android:color/white"
                                                       android:text="@string/button_save"
                                                       app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                                                       tools:layout_editor_absoluteX="3dp"
                                                       android:layout_marginTop="24dp"
                                                       app:backgroundTint="@color/orange"
    />
</androidx.constraintlayout.widget.ConstraintLayout>